--- a/Trinity.Mvc/Views/Home/Index.cshtml
+++ b/Trinity.Mvc/Views/Home/Index.cshtml
@@ -2,13 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
+@section Stylesheets {
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/tiny-slider/dist/tiny-slider.css">
+}
+
 <partial name="_NavBar" />
 
 <main class="mb-0" role="main">
     <div class="mt-n4">
         <partial name="Home/_HomeHero" />
         @await Component.InvokeAsync("HomeProjects")
+        @await Component.InvokeAsync("StateCarousel")
     </div>
 </main>
 
 <partial name="_Footer" />
+
+@section JavaScripts {
+    <script src="~/assets/vendor/tiny-slider/dist/tiny-slider.js"></script>
+}
