--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectStats.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectStats.cshtml
@@ -49,7 +49,7 @@
                 <small> other donors</small>
             </li>
         </ul>
-        <a class="btn btn-cta-soft btn-block w-100 my-3" href="#">
+        <a class="btn btn-primary-soft btn-block w-100 my-3" href="#">
             <i class="fa-solid fa-heart me-1"></i>
             Donate 
         </a>
