--- a/Trinity.Mvc/wwwroot/css/main.css
+++ b/Trinity.Mvc/wwwroot/css/main.css
@@ -1,10 +1,24 @@
 @font-face {
-    font-family: "Raleway";
-    src: url('../fonts/raleway/Raleway-VariableFont_wght.ttf') format('truetype');
+    font-family: "Roboto Flex";
+    src: url('../fonts/roboto/flex/RobotoFlex-VariableFont_GRAD\,XTRA\,YOPQ\,YTAS\,YTDE\,YTFI\,YTLC\,YTUC\,opsz\,slnt\,wdth\,wght.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: "Roboto Slab";
+    src: url('../fonts/roboto/slab/RobotoSlab-VariableFont_wght.ttf') format('truetype');
 }
 
 :root {
     /* custom theme */
+    --american-red: #b22234;
+    --american-red-rgb: 178, 34, 52;
+    --flame-red: #8E1B2A;
+    --flame-red-rgb: 142, 27, 42;
+    --american-blue: #3C3B6E;
+    --american-blue-rgb: 60, 59, 110;
+    --paua: #302F58;
+    --paua-rgb: 48, 47, 88;
+
     --silver-tree: #5fc08a;
     --silver-tree-rgb: 95,192,138;
     --ocean-green: #4C9A6E;
@@ -27,27 +41,22 @@
     --black-pearl-rgb: 6, 10, 14;
     
     /* general elements */
-    --bs-link-color: var(--silver-tree);
-    --bs-link-color-rgb: var(--silver-tree-rgb);
+    --bs-link-color: var(--american-red);
+    --bs-link-color-rgb: var(--american-red-rgb);
     --bs-link-decoration: none;
-    --bs-link-hover-color: var(--ocean-green);
-    --bs-primary: var(--silver-tree);
-    --bs-primary-rgb: var(--silver-tree-rgb);
-    --bs-success: #0cbc87;
-    --bs-success-rgb: 12, 188, 135;
-    --bs-success-text: #146c43;
-    --complementary: var(--shakespeare);
-    --complementary-rgb: var(--shakespeare-rgb);
-    --cta: var(--mandy);
-    --cta-rgb: var(--mandy-rgb);
+    --bs-link-hover-color: var(--flame-red);
+    --bs-primary: var(--american-red);
+    --bs-primary-rgb: var(--american-red-rgb);
+    --complementary: var(--american-blue);
+    --complementary-rgb: var(--american-blue-rgb);
 }
 
 body {
-    font-family: "Raleway" !important;
+    font-family: "Roboto Flex" !important;
 }
 
 a:hover {
-    color: rgb(var(--ocean-green-rgb)) !important;
+    color: rgb(var(--flame-red-rgb)) !important;
 }
 
 h1,
@@ -56,7 +65,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Raleway" !important;
+    font-family: "Roboto Slab" !important;
     color: var(--revolver);
 }
 
@@ -66,34 +75,34 @@ h6 {
 }
 
 .btn-link:hover {
-    color: var(--ocean-green) !important;
+    color: var(--flame-red) !important;
 }
 
 .pagination-light .page-link:hover {
     background-color: var(--bs-link-hover-color);
     border-color: var(--bs-link-hover-color);
-    color: var(--pearl) !important;
+    color: #fff !important;
 }
 
 .nav-link:hover, .nav-link:focus {
-    color: var(--ocean-green);
+    color: var(--flame-red);
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-    color: var(--ocean-green);
-    background-color: #DDF1E7;
+    color: var(--flame-red);
+    background-color: #F4E1E4;
 }
 
 .theme-gradient {
-    background: var(--silver-tree);
-    background: -moz-linear-gradient(0deg, rgba(var(--silver-tree-rgb), 1) 0%, rgba(var(--complementary-rgb),1) 100%);
-    background: -webkit-linear-gradient(0deg, rgba((var(--silver-tree-rgb)), 1) 0%, rgba(var(--complementary-rgb),1) 100%);
-    background: linear-gradient(0deg, rgba(var(--silver-tree-rgb), 1) 0%, rgba(var(--complementary-rgb),1) 100%);
+    background: var(--american-red);
+    background: -moz-linear-gradient(0deg, rgba(var(--american-red-rgb), 1) 0%, rgba(var(--complementary-rgb),1) 100%);
+    background: -webkit-linear-gradient(0deg, rgba((var(--american-red-rgb)), 1) 0%, rgba(var(--complementary-rgb),1) 100%);
+    background: linear-gradient(0deg, rgba(var(--american-red-rgb), 1) 0%, rgba(var(--complementary-rgb),1) 100%);
     /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#63a0c1",endColorstr="#6fbc97",GradientType=1); */
 }
 
 .cover-gradient {
-    background-color: var(--silver-tree); background-image: linear-gradient(315deg, var(--complementary) 0%, var(--silver-tree) 74%);
+    background-color: var(--american-red); background-image: linear-gradient(315deg, var(--complementary) 0%, var(--american-red) 74%);
 }
 
 .card.card-overlay-bottom:before {
@@ -108,8 +117,8 @@ h6 {
 
 .nav.nav-bottom-line .nav-link.active {
     background: transparent;
-    color: var(--ocean-green);
-    border-bottom: 3px solid var(--ocean-green);
+    color: var(--flame-red);
+    border-bottom: 3px solid var(--flame-red);
 }
 
 .bg-complementary {
@@ -128,30 +137,30 @@ h6 {
 }
 
 a.nav-link.text-light-emphasis:hover {
-    color: var(--ocean-green) !important;
+    color: var(--flame-red) !important;
 }
 
 .btn-primary {
-    background-color: var(--silver-tree) !important;
-    color: var(--pearl) !important;
-    border: var(--silver-tree) !important;
+    background-color: var(--american-red) !important;
+    color: #fff !important;
+    border: var(--american-red) !important;
 }
 
 .btn-primary:hover {
-    background-color: var(--ocean-green) !important;
-    color: var(--pearl) !important;
+    background-color: var(--flame-red) !important;
+    color: #fff !important;
 }
 
 
 .btn-primary-soft:active, .btn-primary-soft:hover, .btn-primary-soft:focus {
-    color: var(--pearl) !important;
-    background-color: var(--silver-tree) !important;
-    border-color: var(--silver-tree) !important;
+    color: #fff !important;
+    background-color: var(--american-red) !important;
+    border-color: var(--american-red) !important;
 }
 
 .btn-primary-soft {
-    color: var(--silver-tree);
-    background-color: rgba(var(--silver-tree-rgb), 0.1);
+    color: var(--american-red);
+    background-color: rgba(var(--american-red-rgb), 0.1);
 }
 
 .btn-complementary-soft {
@@ -160,60 +169,31 @@ a.nav-link.text-light-emphasis:hover {
 }
 
 .btn-complementary-soft:active, .btn-complementary-soft:hover, .btn-complementary-soft:focus {
-    color: var(--pearl) !important;
+    color: #fff !important;
     background-color: var(--complementary) !important;
     border-color: var(--complementary) !important;
 }
 
 .btn-complementary:active, .btn-complementary:hover, .btn-complementary:focus {
-    color: var(--pearl) !important;
-    background-color: var(--san-marino) !important;
-    border-color: var(--san-marino) !important;
+    color: #fff !important;
+    background-color: var(--paua) !important;
+    border-color: var(--paua) !important;
 }
 
 .text-complementary {
     color: var(--complementary) !important;
 }
 
-.btn-cta {
-    background-color: var(--cta) !important;
-    color: var(--pearl) !important;
-    border: var(--cta) !important;
-}
-
-.btn-cta:hover {
-    background-color: var(--solid-pink) !important;
-    color: var(--pearl) !important;
-}
-
-
-.btn-cta-soft:active, .btn-cta-soft:hover, .btn-cta-soft:focus {
-    color: var(--pearl) !important;
-    background-color: var(--cta) !important;
-    border-color: var(--cta) !important;
-}
-
-.btn-cta-soft {
-    color: var(--cta);
-    background-color: rgba(var(--cta-rgb), 0.1);
-}
-
-.btn-cta-soft:active, .btn-cta-soft:hover, .btn-cta-soft:focus {
-    color: var(--pearl) !important;
-    background-color: var(--cta) !important;
-    border-color: var(--cta) !important;
-}
-
 .accordion-button:not(.collapsed) {
-    color: var(--silver-tree);
+    color: var(--american-red);
     background-color: var(--bs-accordion-active-bg);
     -webkit-box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
     box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 
 .form-check-input:checked {
-    background-color: var(--silver-tree);
-    border-color: var(--silver-tree);
+    background-color: var(--american-red);
+    border-color: var(--american-red);
 }
 
 .form-select {
@@ -221,32 +201,32 @@ a.nav-link.text-light-emphasis:hover {
 }
 
 .fc .fc-button-primary {
-    background-color: var(--silver-tree);
-    border-color: var(--silver-tree);
-    color: var(--pearl);
+    background-color: var(--american-red);
+    border-color: var(--american-red);
+    color: #fff;
 }
 
 .fc .fc-button-primary:disabled {
-    background-color: var(--padua);
-    border-color: var(--padua);
-    color: var(--pearl);
+    background-color: #EAC5CA;
+    border-color: #EAC5CA;
+    color: #fff;
     font-weight: 600;
 }
 
 .fc .fc-daygrid-day.fc-day-today {
-    background-color: rgba(var(--padua-rgb), 0.1);
+    background-color: rgba(234,197,202, 0.1);
 }
 
 .fc-h-event {
-    background-color: var(--silver-tree);
-    border: 1px solid var(--silver-tree);
+    background-color: var(--american-red);
+    border: 1px solid var(--american-red);
     display: block;
 }
 
 .fc .fc-button-primary:hover {
-    background-color: var(--ocean-green);
-    border-color: var(--ocean-green);
-    color: var(--pearl);
+    background-color: var(--flame-red);
+    border-color: var(--flame-red);
+    color: #fff;
 }
 
 .tagcloud a {
@@ -299,7 +279,7 @@ a.nav-link.text-light-emphasis:hover {
 
 .avatar-title {
     align-items: center;
-    background-color: #3b76e1;
+    background-color: rgb(var(--american-red-rgb));
     color: #fff;
     display: flex;
     font-weight: 500;
