--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectCard.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectCard.cshtml
@@ -15,7 +15,7 @@
             <i class="bi bi-calendar-check pe-1"></i>
             @Model.Created.ToString("MMM d, yyyy")
         </p>
-        <p class="small"> <i class="bi bi-geo-alt pe-1"></i> San francisco </p>
+        <p class="small"> <i class="bi bi-geo-alt pe-1"></i> @Model.City!.Name </p>
         <ul class="avatar-group list-unstyled align-items-center mb-0">
             <li class="avatar avatar-xs">
                 <img class="avatar-img rounded-circle" src="~/assets/images/avatar/01.jpg" alt="avatar">
