--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectNav.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectNav.cshtml
@@ -66,9 +66,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light-emphasis" href="#"> 
-                                <i class="fa-solid fa-photo-film me-2"></i>
-                                Media Library
+                            <a class="nav-link text-light-emphasis" asp-controller="Projects" asp-action="Journey" asp-route-id="@Model.Id"> 
+                                <i class="fa-solid fa-book-open-reader me-2"></i>
+                                Journey
                             </a>
                         </li>
                         <li class="nav-item">
