--- a/Trinity.Mvc/Views/Shared/Home/_HomeHero.cshtml
+++ b/Trinity.Mvc/Views/Shared/Home/_HomeHero.cshtml
@@ -8,7 +8,7 @@
                 <div class="col-xl-8 col-lg-10 mx-auto pt-sm-5 text-center">
                     <!-- Title -->
                     <h1 style="letter-spacing: 3.3rem" class="text-white font-shadow text-uppercase ms-5">Heroes</h1>
-                    <p class="text-white font-shadow lead me-2" style="letter-spacing: .02rem">Heroes are not born, we choose to become one.</p>
+                    <p class="text-white font-shadow lead me-2" style="letter-spacing: .02rem">Create good, become the hero</p>
                 </div>
                 <div class="mb-n5 mt-3 mt-lg-5">
                     <div class="col-9 mx-auto">
