--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectHeader.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectHeader.cshtml
@@ -70,7 +70,7 @@
                 <i class="fa-solid fa-heart me-1"></i> @Model.Cause!.Name
             </li>
             <li class="list-inline-item">
-                <i class="fa-solid fa-map-location-dot me-1"></i> New Hampshire
+                <i class="fa-solid fa-map-location-dot me-1"></i> @Model.City!.Name
             </li>
             <li class="list-inline-item">
                 <i class="fa-solid fa-calendar-plus me-1"></i> Started on @Model.Created.ToString("MMM d, yyyy")
@@ -86,6 +86,11 @@
                 <a class="nav-link @Html.ActiveClass("Endeavors", "Profile")" asp-controller="Endeavors" asp-action="Profile" asp-route-slug="@Model.Slug">
                     About
                 </a>
+            </li>
+            <li class="nav-item"> 
+                <a class="nav-link @Html.ActiveClass("Endeavors", "Journey")" asp-controller="Endeavors" asp-action="Journey" asp-route-slug="@Model.Slug">
+                    Journey
+                </a> 
             </li>
             <li class="nav-item"> 
                 <a class="nav-link @Html.ActiveClass("Endeavors", "Expenditures")" asp-controller="Endeavors" asp-action="Expenditures" asp-route-slug="@Model.Slug">
@@ -107,11 +112,6 @@
                     Supporters 
                     <span class="badge bg-primary bg-opacity-10 text-primary small">250</span> 
                 </a>
-            </li>
-            <li class="nav-item"> 
-                <a class="nav-link @Html.ActiveClass("Endeavors", "Media")" asp-controller="Endeavors" asp-action="Media" asp-route-slug="@Model.Slug">
-                    Media
-                </a> 
             </li>
         </ul>
     </div>
