--- a/Trinity.Mvc/Views/Shared/Projects/_ProjectCard.cshtml
+++ b/Trinity.Mvc/Views/Shared/Projects/_ProjectCard.cshtml
@@ -7,7 +7,7 @@
     <div class="card-body position-relative pt-0">
         <a class="btn btn-xs btn-primary mt-n3" asp-controller="Projects" asp-action="Index" asp-route-cause="@Model.Cause!.Slug">@Model.Cause!.Name </a>
         <h4 class="mt-3">
-            <a asp-controller="Endeavors" asp-action="Profile" asp-route-slug="@Model.Slug">
+            <a asp-controller="Endeavors" asp-action="Profile" asp-route-slug="@Model.Slug" asp-route-id="@Model.Id">
                 @Model.Name
             </a>
         </h4>
@@ -37,7 +37,7 @@
         </ul>
         <div class="d-flex mt-3 justify-content-between">
             <div class="w-100">
-                <a class="btn btn-sm btn-primary-soft d-block" asp-controller="Endeavors" asp-action="Profile" asp-route-slug="@Model.Slug">
+                <a class="btn btn-sm btn-primary-soft d-block" asp-controller="Endeavors" asp-action="Profile" asp-route-slug="@Model.Slug" asp-route-id="@Model.Id">
                     <i class="fa-solid fa-heart me-1"></i> Interested
                 </a>
             </div>
