--- a/Trinity.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/Trinity.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="nav flex-nowrap align-items-center ms-sm-3 list-unstyled">
