--- a/Trinity.Mvc/Views/Account/Login.cshtml
+++ b/Trinity.Mvc/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
                         <div class="d-grid"><button type="submit" class="btn btn-lg btn-primary">Login</button></div>
                         
                         <p class="mb-0 mt-3">
-                            &copy;2023 <a target="_blank" href="#">Heroes Community Action Network</a> All rights reserved
+                            &copy;2023 <a target="_blank" href="#">Trinity Community Action Network</a> All rights reserved
                         </p>
                     </form>
                 </div>
