--- a/Trinity.Mvc/Views/Shared/Discussions/_DiscussionInfoCard.cshtml
+++ b/Trinity.Mvc/Views/Shared/Discussions/_DiscussionInfoCard.cshtml
@@ -78,7 +78,7 @@
                     <a class="nav-link" href="#">Privacy & terms</a>
                 </li>
             </ul>
-            <p class="small text-center mt-1">©2023 <a class="text-body" target="_blank" href="#"> Heroes Community Action Network</a></p>
+            <p class="small text-center mt-1">©2023 <a class="text-body" target="_blank" href="#"> Trinity Community Action Network</a></p>
         </div>
     </div>
 </nav>
