--- a/Trinity.Mvc/Views/Shared/_LoginPartial.cshtml
+++ b/Trinity.Mvc/Views/Shared/_LoginPartial.cshtml
@@ -58,7 +58,7 @@
                                 class="list-group-item list-group-item-action rounded badge-unread d-flex border-0 mb-1 p-3 position-relative">
                                 <div class="avatar text-center d-none d-sm-inline-block">
                                     <img class="avatar-img rounded-circle"
-                                        src="{% static '~/assets/images/avatar/02.jpg" alt="">
+                                        src="~/assets/images/avatar/02.jpg" alt="">
                                 </div>
                                 <div class="ms-sm-3 d-flex">
                                     <div>
