--- a/Trinity.Mvc/Views/Shared/_Footer.cshtml
+++ b/Trinity.Mvc/Views/Shared/_Footer.cshtml
@@ -6,7 +6,7 @@
                 <a href="/">
                     <img class="img-fluid ms-4" src="~/assets/images/logo-mobile.svg" alt="" style="max-width: 90%;">
                 </a>
-                <p class="mt-2 text-lg-center" style="">Heroes Community Action Network</p>
+                <p class="mt-2 text-lg-center" style="">Trinity Community Action Network</p>
             </div>
             <div class="col-sm-6 col-lg-3">
             <!-- Footer Widget -->
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-lg-6">
                     <!-- Copyright START -->
-                    <p class="text-center text-lg-end mb-0">©2023 <a class="text-body" target="_blank" href="#"> Heroes Community Action Network</a> All rights reserved.</p>
+                    <p class="text-center text-lg-end mb-0">©2023 <a class="text-body" target="_blank" href="#"> Trinity Community Action Network</a> All rights reserved.</p>
                     <!-- Copyright END -->
                 </div>
             </div>
